# spark-firecracker

./: .gitattributes
docker_rootfs/: Dockerfile  copy-to-rootfs.sh  firecracker-internet
project/matchbox/: Cargo.toml
project/matchbox/src/: cmd.rs  main.rs
project/matchbox/src/net/: mod.rs
project/matchbox/src/vm/: mod.rs  models.rs
project/spark/: Cargo.toml
project/spark-models/: Cargo.toml
project/spark-models/src/: lib.rs
project/spark/.cargo/: config.toml
rootfs/: Dockerfile
rootfs/etc/init.d/: firecracker-internet  spark  spark-server
scripts/: build-rootfs  build-spark  create-rootfs  create-snapshot-of-vm  matchbox-start  send-load-snapshot-command  setup-bridge  start  start-vm-from-snapshot  start.sh
scripts/matchbox-scripts/: create-vm  create-vm-snapshot-and-resume
spark/: Cargo.toml  build.rs
spark/protos/: api.proto
spark/src/: cmd.rs  mod.rs
spark/src/net/: mod.rs
spark/src/vm/: mod.rs  models.rs
