[package]
name = "spark"
version = "0.1.0"
edition = "2021"

[lib]
name = "spark_lib"
path = "src/mod.rs"

[[bin]]
name = "spark-server"
path = "bin/server.rs"

[[bin]]
name = "spark-client"
path = "bin/client.rs"


[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.4", features = ["derive"] }
prost = "0.11.9"
tokio = { version = "1.28.2", features = ["full"] }
tonic = "0.9.2"

[build-dependencies]
tonic-build = "0.9.2"
