[package]
name = "spark"
version = "0.1.0"
edition = "2021"

[lib]
name = "spark_lib"
path = "src/mod.rs"

[[bin]]
name = "spark"
path = "bin/server.rs"

[[bin]]
name = "spark-client"
path = "bin/client.rs"

[[bin]]
name = "matchbox"
path = "bin/matchbox.rs"


[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.4", features = ["derive"] }
hyper = { version = "0.14" }
hyperlocal = "0.8.0"
prost = "0.11.9"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
tokio = { version = "1.28.2", features = ["full"] }
tonic = "0.9.2"
axum = "0.6.20"
netns-rs = "0.1"

[build-dependencies]
tonic-build = "0.9.2"
