[package]
name = "matchbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.4", features = ["derive"] }
hyper = { version = "0.14" }
hyperlocal = "0.8.0"
prost = "0.11.9"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
tokio = { version = "1.28.2", features = ["full"] }
tonic = "0.9.2"
axum = "0.6.20"
axum-macros = "0.3"
netns-rs = "0.1"
uuid = { version = "1.4", features = ["v4"]}
userfaultfd = "0.7"
libc = "0.2"
spark-models = { path = "../spark-models" } 