[package]
name = "spark-models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.9.2"
tokio = { version = "1.28.2", features = ["full"] }
prost = "0.11.9"

[build-dependencies]
tonic-build = "0.9.2"
