[package]
name = "spark"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "spark"
path = "bin/server.rs"

[[bin]]
name = "spark-client"
path = "bin/client.rs"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.4", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
tonic = "0.9.2"
spark-models = { path = "../spark-models" }

[build-dependencies]
tonic-build = "0.9.2"
